# JapaneseApp

./: .gitignore
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/assets/database/: JMdict_e  n1-vocab-kanji-eng.anki  n1-vocab-kanji-hiragana.anki  n2-vocab-kanji-eng.anki  n2-vocab-kanji-hiragana.anki  n3-vocab-kanji-eng.anki  n3-vocab-kanji-hiragana.anki  n4-vocab-kanji-eng.anki  n4-vocab-kanji-hiragana.anki  n5-vocab-kanji-eng.anki  n5-vocab-kanji-hiragana.anki
AndroidApp/app/src/main/cpp/: CMakeLists.txt  CppSharedLogic  native-lib.cpp
AndroidApp/app/src/main/java/com/example/japanapp/: Characters.java  Dictionary.java  GeneralSetttings.java  LogicHandlerAbstraction.java  MainActivity.java  Numbers.java  Question.java  Vocabulary.java
AndroidApp/app/src/main/res/layout/: activity_characters.xml  activity_general_setttings.xml  activity_main.xml  activity_numbers.xml  activity_question.xml  activity_vocabulary.xml  content_characters.xml  content_dictionary.xml  content_general_setttings.xml  content_numbers.xml  content_question.xml  content_vocabulary.xml
AndroidApp/app/src/main/res/values/: keycodes.xml  strings.xml
AndroidApp/app/src/main/res/xml/: hiragana_0.xml  hiragana_1.xml  katakana_1.xml  popup.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
CppSharedLogic/: CMakeLists.txt  CppShared  main.cpp  sharedinterface.i
CppSharedLogic/include/: sharedlogic.h
CppSharedLogic/include/detail/: util.hpp  vocabparse.h
CppSharedLogic/src/: sharedlogic.cpp
CppSharedLogic/src/detail/: util.cpp  vocabparse.cpp
